tests/ui/row_policy_invalid_source.stderr
error: read row policy field `tenant_id` compares incompatible field types `I64` and `String`
 --> tests/ui/row_policy_invalid_source.rs:7:8
  |
7 | struct InvalidPolicySource {
  |        ^^^^^^^^^^^^^^^^^^^
